Projeto/Compilador/tests/cases/ok/T47_OK_leitura_de_string_indexada.pas
program T47;
var s: string; c: char;
begin
  s := 'abc';
  c := s[1];
end.
