Projeto/Compilador/tests/cases/error/T46.pas
program T46;
var s: string;
begin
  s := 'abc';
  s[1] := 'a';
end.
